--- a/Nguyễn Lê Thảo Nhi_HTML exercise (L&D Golf course)/Công ty LANI & DANI.html
+++ b/Nguyễn Lê Thảo Nhi_HTML exercise (L&D Golf course)/Công ty LANI & DANI.html
@@ -4,26 +4,8 @@
 	<title>Công ty LANI & DANI</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<style>
-		li{
-			display: inline;
-			margin-left: 20px;
-		}
-		/*.header{
-			background: var(--bg);
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			padding: 1.5rem 7%;
-			border-bottom: var(--border);
-			position: fixed;
-			top:0; left: 0; right: 0;
-			z-index: 1000; 
-		}*/
-	</style>
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
-
-
 
 <body>
 	<header class="header">
@@ -41,66 +23,66 @@
 			<a href="">TIẾNG VIỆT</a>
 		</nav> -->
 
-		<div class="1">
+		<div class="s1">
 			<ul type="none">
 				<li><img src="images/logo.png" alt="Lani & Dani Logo" width="170px" height="30px"></li>
-				<li>TRANG CHỦ</li>
-				<li>DỊCH VỤ GOLF</li>
-				<li>DỊCH VỤ KHÁC</li>
-				<li>TIN TỨC</li>
-				<li>CÔNG TRÌNH</li>
-				<li>GIỚI THIỆU</li>
-				<li>LIÊN HỆ</li>
-				<li>TIẾNG VIỆT</li>
+				<li><a href="">TRANG CHỦ</a></li>
+				<li><a href="">DỊCH VỤ GOLF</a></li>
+				<li><a href="">DỊCH VỤ KHÁC</a></li>
+				<li><a href="">TIN TỨC</a></li>
+				<li><a href="">CÔNG TRÌNH</a></li>
+				<li><a href="">GIỚI THIỆU</a></li>
+				<li><a href="">LIÊN HỆ</a></li>
+				<li><a href="">TIẾNG VIỆT</a></li>
 			</ul>
 		</div>
 	</header>
 
-	<div class="2">
+	<section class="home">
 		<h3>Chúng tôi là ai?</h3>
-		<h1 style="color: darkgreen">Công ty LANI & DANI</h1>
-		<div style="width: 500px; height: 200px">
+		<h1>Công ty LANI & DANI</h1>
+		<div>
 			<p><b>Tự hào là công ty đầu tiên tại Việt Nam cung cấp dịch vụ trọn gói</b> trong lĩnh vực tư vấn, thiết kế, xây dựng sân Golf, cung ứng nguồn lực, dịch vụ huấn luyện, quản lý và hậu cần cho dịch vụ Golf.</p>
 			<p>Chúng tôi còn hoạt động trong lĩnh vực xây lắp và đầu tư xây dựng các công trình dân dụng, nhà xưởng công nghiệp, công trình hạ tầng kĩ thuật, đường giao thông, cầu cảng, bờ kè, cầu cống, nạo vét sông rạch, xây dựng các công trình thuỷ lợi, thi công san lấp mặt bằng, sản xuất và kinh doanh vật liệu xây dựng.</p>
 		</div>
 		<img src="images/introduction-girl.jpg" alt="introduction-girl.jpg" width="200px" height="300px">
 		<img src="images/introduction-man.jpg" alt="introduction-man.jpg" width="200px" height="300px">
-	</div>
+	</section>
 
-	<div class="3">
-		<center>
-			<h3 style="color: darkgreen">Chuyên gia hàng đầu</h3>
+	<section class="golfservice">
+		<center class="center1">
+			<h3>Chuyên gia hàng đầu</h3>
 			<h1>Dịch Vụ Sân Golf</h1>
-			<hr style="width: 100px; border-top:3px solid green">
+			<hr>
 		
 			<p>Với đội ngũ thiết kế và xây dựng chuyên nghiệp,<b> Lani & Dani</b> đảm bảo sẽ mang lại những sân golf chất lượng cao, đầy thú vị và thử thách, phù hợp cho các golf thủ ở tất cả các mức kỹ năng</p>
 		</center>
-		<div style="width: 100%; height: 1500px">
-			<div id="Thiết Kế" style ="text-align: center; width: 350px; height: 500px; margin-left: 10px;">
-				<img src="images/service-design.jpg" alt="service-design.jpg" style ="width: 100%; height: 60%; margin-left: 10px">
+		<div>
+			<div id="design">
+				<img src="images/service-design.jpg" alt="service-design.jpg">
 				<h4>Thiết Kế</h4>
 				<p>Đội ngũ thiết kế sân golf hơn 10 năm kinh nghiệm, thi công đạt tiêu chuẩn quốc tế.</p>
 			</div>
 
-			<div id="Xây Dựng" style ="text-align: center; width: 350px; height: 500px; margin-left: 10px">
-				<img src="images/service-construction.jpg" alt="service-construction.jpg" style ="width: 100%; height: 60%; margin-left: 10px">
+			<div id="construction">
+				<img src="images/service-construction.jpg" alt="service-construction.jpg">
 				<h4>Xây Dựng</h4>
 				<p>Là đơn vị đứng đầu về Thiết kế Thi công sân Golf chuyên nghiệp trên Toàn Quốc.</p>
 			</div>
 
-			<div id="Vận Hành" style ="text-align: center; width: 350px; height: 500px; margin-left: 10px">
-				<img src="images/service-operation.jpg" alt="service-operation.jpg" style ="width: 100%; height: 60%; margin-left: 10px">
+			<div id="operation">
+				<img src="images/service-operation.jpg" alt="service-operation.jpg">
 				<h4>Vận Hành</h4>
 				<p>Quản lý, điều hành, vận hành hoạt động kinh doanh hàng ngày của sân golf.</p>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="4">
-		<center>
-			<h3 style="color: darkgreen">Uy tín và Chuyên nghiệp</h3>
+	<section class="otherservice">
+		<center class="center2">
+			<h3>Uy tín và Chuyên nghiệp</h3>
 			<h1>Các dịch vụ khác</h1>
-			<hr style="width: 100px; border-top:3px solid green">
+			<hr>
 		
 			<p>Với định hướng phát triển đa ngành nghề, ngoài lĩnh vực sân Golf, Công ty TNHH LANI&DANI còn tập trung hoạt động kinh doanh trong các lĩnh vực dưới đây</p>
 		</center>
@@ -109,50 +91,50 @@
 			<span style='font-size:100px;'>&#127968;</span>
 			<h4>Xây dựng nhà ở</h4>
 		</div>
-	</div>
+	</section>
 	
 	
-	<div class="5" style="text-align: center;">
+	<section class="news">
 		<img src="images/Consultant.png" alt="Consultant.png" width="200px" height="200">
 		<h1>Bạn đang cần tư vấn?</h1>
 		<p>Đừng ngần ngại, hãy liên hệ ngay với LaniDani để được tư vấn hoàn toàn miễn phí và báo giá tốt nhất dành riêng cho bạn.</p>
-	</div>
+	</section>
 
 	<div>
-		<form method="post" action="">
-			<input type="text" name="Name" placeholder="Tên của bạn" style="width: 400px; height: 30px" /><br>
-			<input type="email" required="true" placeholder="Email của bạn" style="width: 400px; height: 30px"/><br>
-			<input type="tel" required="true" placeholder="Số điện thoại" style="width: 400px; height: 30px"/><br>
-			<textarea rows="3" name="Content" placeholder="Nội dung" style="width: 400px;"></textarea><br>
-			<input type="submit" value="GỬI" style="background-color: green; color: white; width: 400px; height: 30px">
+		<form class="form" method="post" action="">
+			<input type="text" name="Name" placeholder="Tên của bạn"/><br>
+			<input type="email" required="true" placeholder="Email của bạn"/><br>
+			<input type="tel" required="true" placeholder="Số điện thoại"/><br>
+			<textarea cols="50" rows="3" name="Content" placeholder="Nội dung"></textarea><br>
+			<button type="submit">GỬI</button>
 		</form>
 	</div>
 
-	<div class="6">
+	<section class="s6">
 		<div>
-			<h3 style="color: darkgreen">Cập nhật hằng ngày</h3>
+			<h3>Cập nhật hằng ngày</h3>
 			<h1>Tin Tức - Hoạt Động</h1>
-			<hr style="width: 100px; border-top:3px solid green;" align="left">
+			<hr align="left">
 		</div>
 
 		<div>
 			<img src="images/news1.jpg" alt=news1.jpg width="300px" height="200px">
 			<h5>GIẢI ĐẤU GOLF</h5>
 			<h3>Những lưu ý quan trọng trong cách chọn giày golf cho nam</h3>
-			<p style="color: gray">Tháng Mười 28, 2020</p>
-			<hr style="width: 50px; border-top:2px solid lightgray;" align="left">
+			<p class="date">Tháng Mười 28, 2020</p>
+			<hr align="left">
 			<p>Theo chân các golfer nam ra sân đó chính là đôi giày. làm thế nào để có đôi giày mang êm chân trong suốt 4-5 giờ và tạo ra sự [...]</p>
-			<input type="button" name="detail" value="CHI TIẾT" style="border: green solid; color: green; width: 100px">
+			<input type="button" name="detail" value="CHI TIẾT">
 		</div>
 		<br>
 		<div>
 			<img src="images/news2.jpg" alt=news2.jpg width="300px" height="200px">
 			<h5>KỸ THUẬT GOLF</h5>
 			<h3>Cách chọn kính chơi golf để bảo vệ mắt tốt nhất</h3>
-			<p style="color: gray">Tháng Mười 28, 2020</p>
-			<hr style="width: 50px; border-top:2px solid lightgray;" align="left">
+			<p class="date">Tháng Mười 28, 2020</p>
+			<hr align="left">
 			<p>Bên cạnh những chiếc mũ golf, kính chơi golf là phụ kiện không thể thiếu cho các golfer trong những ngày nắng nóng, nhiệt lượng cao [...]</p>
-			<input type="button" name="detail" value="CHI TIẾT" style="border: green solid; color: green; width: 100px">
+			<input type="button" name="detail" value="CHI TIẾT">
 		</div>
 		<br>
 		<div>
@@ -170,16 +152,16 @@
 			<h5>KỸ THUẬT GOLF</h5>
 			<h3>Điểm Hole in One trong golf nghĩa là gì?</h3>
 		</div>
-	</div>
+	</section>
 
-	<div class="7">
+	<section class="s7">
 		<img src="images/logo.png" alt="logo.png" width="200px" height="50px">
 		<p>Lani & dani là công ty hoạt động đa ngành, đa lĩnh vực, với chủ lực là thiết kế đầu tư sân golf, quy hoạch cụm dân cư, khu đô thị, khu đô thị mới hoàn chỉnh</p>
-	</div>
+	</section>
 
-	<div class="8">
+	<section class="s8">
 		<h5>LIÊN HỆ</h5>
-		<hr style="width: 50px; border-top:2px solid lightgray;" align="left">
+		<hr align="left">
 		<p>
 			<b>Địa chỉ</b><br>
 			202 Nguyễn Văn Hưởng, P.Thảo Điền, TP.Thủ Đức, TP.HCM<br><br>
@@ -188,12 +170,12 @@
 			<b>Email</b><br>
 			info@lanidani.com<br><br>
 		</p>
-	</div>
+	</section>
 
-	<div class="9">
+	<section class="s9">
 		<h5>TIN TỨC</h5>
-		<hr style="width: 50px; border-top:2px solid lightgray;" align="left">
-		<div class="info" style="width: 35%; height: 200px">
+		<hr align="left">
+		<div class="info">
 		<ul type="none">
 			<li>​<b>&#10095; Kỹ thuật Golf</b></li>
 		</ul>
@@ -206,9 +188,9 @@
 			<li>​<b>&#10095; Tư vấn Golf</b></li>
 		</ul>
 		<hr>
-	</div>
+	</section>
 
-	<footer class="10">
+	<footer class="s10">
 		Copyright 2021 &#169; LANI & DANI Company
 	</footer>
 
