--- a/Nguyễn Lê Thảo Nhi_LAB 5/Problem 3. Body and Sidebar.html
+++ b/Nguyễn Lê Thảo Nhi_LAB 5/Problem 3. Body and Sidebar.html
@@ -88,6 +88,9 @@
 						<div class="col-6 col-lg-8 info-seen-products">
 							<h6>Chúc mừng Tốt nghiệp</h6>
 							<p>350,000 đ</p>
+							<span class="dis-30-logo">
+								<p style="">-30%</p>
+							</span>
 						</div>
 					</div>
 				</div>
